--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -202,7 +202,8 @@
 }
 
 .post-title {
-    font-size: 42px;
+	//font-size: 42px;
+	font-size: 2em;
     letter-spacing: -1px;
     line-height: 1;
 
