--- a/_includes/adsense.html
+++ b/_includes/adsense.html
@@ -1,10 +1,8 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- blog.tolinezip.com -->
 <ins class="adsbygoogle"
-	 style="display:block;margin-bottom:20px;"
+     style="display:block;margin-bottom:15px;"
      data-ad-client="ca-pub-9437536937075029"
      data-ad-slot="8180381469"
      data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
