--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -263,6 +263,19 @@ tbody tr:nth-child(odd) th {
   font-weight: 300;
 }
 
+/*
+ * Footnote
+ */
+.footnotes {
+  margin-top: 3rem;
+  padding-top: 1rem;
+  border-top: 1px solid #eee;
+  font-size: .75rem;
+}
+
+.footnotes ol {
+  padding-left: 2rem;
+}
 
 /*
  * Messages
